[FV Health] Update Swagger
Update the swagger specification with small changes
